# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.93 $ $Date: 2008-11-03 23:16:00 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2008-11-03  Christian Heller  <christian.heller@tuxtax.de>
        * Implement new test function "test_decode_utf8" in file "tester.c"
        * Debug file "file_communicator.c" from a wrong destination size setting
            (forgot to add one, so that the first character of a file was not read
            and the utf-8 decoding did not work afterwards)
        * Debug files "xml_converter.c", "xml_processor.c", "xml_selector.c", "xml_detector.c"

2008-10-28  Christian Heller  <christian.heller@tuxtax.de>
        * Search bug that utf-8 decoding does not work for a CYBOL/ XML file
            (it does work if handing over an internal ASCII character sequence; not found yet)

2008-10-25  Christian Heller  <christian.heller@tuxtax.de>
        * Debug file "xml_converter.c" and related files
        * Split file "xml_converter.c" into many files
        * Add new "memoriser" sub directories "detector", "processor", "selector"

2008-10-24  Christian Heller  <christian.heller@tuxtax.de>
        * Correct wide- into normal character array in function "communicate_receiving_file_system"
            of file "file_system_receiving_communicator.c"
        * Adapt "decode" function in module "converter.c", to first
            convert cybol into xml and only afterwards into a cyboi compound

2008-10-23  Christian Heller  <christian.heller@tuxtax.de>
        * Debug source code to the point where the "initialiser.c" calls the