@@ -19,7 +19,7 @@
  * Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
  * Christian Heller <christian.heller@tuxtax.de>
  *
- * @version $RCSfile: compound_accessor.c,v $ $Revision: 1.52 $ $Date: 2008-09-11 23:02:46 $ $Author: christian $
+ * @version $RCSfile: compound_accessor.c,v $ $Revision: 1.53 $ $Date: 2008-11-11 11:05:34 $ $Author: christian $
  * @author Christian Heller <christian.heller@tuxtax.de>
  */
 
@@ -44,28 +44,8 @@
 // Forward declarations.
 //
 
-/**
- * Encodes the knowledge model according to the given knowledge type
- * and creates a byte stream from it.
- *
- * @param p0 the destination (Hand over as reference!)
- * @param p1 the destination count
- * @param p2 the destination size
- * @param p3 the source name
- * @param p4 the source name count
- * @param p5 the source abstraction
- * @param p6 the source abstraction count
- * @param p7 the source model
- * @param p8 the source model count
- * @param p9 the source details
- * @param p10 the source details count
- * @param p11 the knowledge memory
- * @param p12 the knowledge memory count
- * @param p13 the language
- * @param p14 the language count
- */
-void encode(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6,
-    void* p7, void* p8, void* p9, void* p10, void* p11, void* p12, void* p13, void* p14);
+void decode(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6, void* p7, void* p8, void* p9, void* p10, void* p11);
+void encode(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6, void* p7, void* p8, void* p9, void* p10, void* p11, void* p12, void* p13, void* p14);
 
 //
 // Hierarchical name handling.
@@ -1124,18 +1104,44 @@ void add_compound_element_by_name(void* p0, void* p1, void* p2,
 
                 log_terminated_message((void*) INFORMATION_LEVEL_LOG_MODEL, (void*) L"Add compound element by name:");
 
+                // The multibyte name suffix.
+                void* ms = *NULL_POINTER_MEMORY_MODEL;
+                int msc = *NUMBER_0_INTEGER_MEMORY_MODEL;
+                int mss = *NUMBER_0_INTEGER_MEMORY_MODEL;
                 // The name suffix.
                 void* s = *NULL_POINTER_MEMORY_MODEL;
                 int sc = *NUMBER_0_INTEGER_MEMORY_MODEL;
                 int ss = *NUMBER_0_INTEGER_MEMORY_MODEL;
 
-                // Allocate name suffix.
+    fwprintf(stderr, L"TEST add compound element 0 sc: %i\n", sc);
+
+                // Allocate name suffix as multibyte character array.
+                allocate_array((void*) &ms, (void*) &mss, (void*) CHARACTER_ARRAY_MEMORY_ABSTRACTION);
+                // Allocate name suffix as wide character array.
                 allocate_array((void*) &s, (void*) &ss, (void*) WIDE_CHARACTER_ARRAY_MEMORY_ABSTRACTION);
+
+    fwprintf(stderr, L"TEST add compound element 1 dc: %i\n", *((int*) p1));
+    fwprintf(stderr, L"TEST add compound element 1 ss: %i\n", ss);
+    fwprintf(stderr, L"TEST add compound element 1 sc: %i\n", sc);
+    fwprintf(stderr, L"TEST add compound element 1 s: %ls\n", (wchar_t*) s);
 
                 // Use compound count as index to create the element name suffix,
                 // because the element is added at the end of the compound container.
-                encode((void*) &s, (void*) &sc, (void*) &ss, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, p1, (void*) PRIMITIVE_MEMORY_MODEL_COUNT,
+                // The suffix integer is first encoded into a multibyte character array,
+                // and afterwards decoded into a wide character array.
+                encode((void*) &ms, (void*) &msc, (void*) &mss, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, p1, (void*) PRIMITIVE_MEMORY_MODEL_COUNT,
                     *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) INTEGER_NUMBER_CYBOL_ABSTRACTION, (void*) INTEGER_NUMBER_CYBOL_ABSTRACTION_COUNT);
+
+    fwprintf(stderr, L"TEST add compound element 1 mss: %i\n", mss);
+    fwprintf(stderr, L"TEST add compound element 1 msc: %i\n", msc);
+    fwprintf(stderr, L"TEST add compound element 1 ms: %s\n", (char*) ms);
+
+                decode((void*) &s, (void*) &sc, (void*) &ss, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, ms, (void*) &msc,
+                    *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
+
+    fwprintf(stderr, L"TEST add compound element 2 ss: %i\n", ss);
+    fwprintf(stderr, L"TEST add compound element 2 sc: %i\n", sc);
+    fwprintf(stderr, L"TEST add compound element 2 s: %ls\n", (wchar_t*) s);
 
                 // Resize name.
                 if ((*nc + *LIST_SEPARATOR_CYBOL_NAME_COUNT + sc) >= *ns) {
@@ -1148,6 +1154,10 @@ void add_compound_element_by_name(void* p0, void* p1, void* p2,
                     reallocate_array(p3, p4, p5, (void*) WIDE_CHARACTER_ARRAY_MEMORY_ABSTRACTION);
                 }
 
+    fwprintf(stderr, L"TEST add compound element 3 s: %ls\n", (wchar_t*) s);
+    fwprintf(stderr, L"TEST add compound element 3 sc: %i\n", sc);
+    fwprintf(stderr, L"TEST add compound element 3 ss: %i\n", ss);
+
                 // The element name already contains the element base name.
 
                 // Add list element separator characters "_$" to element name.
@@ -1155,17 +1165,35 @@ void add_compound_element_by_name(void* p0, void* p1, void* p2,
                 set_array_elements(*n, p4, (void*) LIST_SEPARATOR_CYBOL_NAME, (void*) LIST_SEPARATOR_CYBOL_NAME_COUNT, (void*) WIDE_CHARACTER_ARRAY_MEMORY_ABSTRACTION);
                 *nc = *nc + *LIST_SEPARATOR_CYBOL_NAME_COUNT;
 
+    fwprintf(stderr, L"TEST add compound element 4 s: %ls\n", (wchar_t*) s);
+    fwprintf(stderr, L"TEST add compound element 4 sc: %i\n", sc);
+    fwprintf(stderr, L"TEST add compound element 4 ss: %i\n", ss);
+
                 // Set new element name by adding the index determined above.
                 // Use name count as index to add the new characters.
                 set_array_elements(*n, p4, s, (void*) &sc, (void*) WIDE_CHARACTER_ARRAY_MEMORY_ABSTRACTION);
                 *nc = *nc + sc;
 
-                // Deallocate name suffix.
+    fwprintf(stderr, L"TEST add compound element 5 s: %ls\n", (wchar_t*) s);
+    fwprintf(stderr, L"TEST add compound element 5 sc: %i\n", sc);
+    fwprintf(stderr, L"TEST add compound element 5 ss: %i\n", ss);
+
+                // Deallocate name suffix as multibyte character array.
+                deallocate_array((void*) &ms, (void*) &mss, (void*) CHARACTER_ARRAY_MEMORY_ABSTRACTION);
+                // Deallocate name suffix as wide character array.
                 deallocate_array((void*) &s, (void*) &ss, (void*) WIDE_CHARACTER_ARRAY_MEMORY_ABSTRACTION);
+
+    fwprintf(stderr, L"TEST add compound element 6 s: %ls\n", (wchar_t*) s);
+    fwprintf(stderr, L"TEST add compound element 6 sc: %i\n", sc);
+    fwprintf(stderr, L"TEST add compound element 6 ss: %i\n", ss);
 
                 // CAUTION! Use compound count as index for adding new elements.
                 // CAUTION! Use DEREFERENCED name, as it was handed over as reference!
                 set_compound_element_by_index(p0, p1, p2, p1, *n, p4, p5, p6, p7, p8, p9, p10, p11, p12, p13, p14);
+
+    fwprintf(stderr, L"TEST add compound element 7 s: %ls\n", (wchar_t*) s);
+    fwprintf(stderr, L"TEST add compound element 7 sc: %i\n", sc);
+    fwprintf(stderr, L"TEST add compound element 7 ss: %i\n", ss);
 
             } else {
 
