@@ -7,11 +7,13 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.69 $ $Date: 2008-11-03 23:16:00 $ $Author: christian $
+# @version $Revision: 1.70 $ $Date: 2008-11-11 11:05:34 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
 
-        * Continue debugging in function "process_xml_tag_name"
+        * Continue debugging in function "add_compound_element_by_name", "encode_integer_vector_elements" and "encode_integer";
+            figure out if first to convert all multibyte characters into wide characters and only afterwards to/from integer,
+            or if to do step-by-step conversion from multibyte character to integer directly
         * Test file "xml_converter.c" functionality calling "model_diagram_converter.c" directly
         * Continue "cybol_converter.c", to translate the model tree into a cyboi schema-conform structure
 
